# content-factory

./: .claudeignore  .gitignore  docker-compose.yml
assets/personagem/bolonhesa/: README.md
backend/: .env.example  pyproject.toml  test_voz.py
backend/alembic/: env.py
backend/alembic/versions/: 1c4c707ddebb_add_audio_path_to_scenes.py  227545b6d05a_add_creative_direction_columns_to_scenes.py  78c1ea172f01_add_verdade_tecnica_to_scenes.py  992820b2e5c3_add_bravata_to_scenes.py  a18e2f522c73_create_video_jobs_table.py  adc6988c317c_add_fact_check_columns_to_scenes.py  b3b6400a33de_create_scenes_table.py  cfba5b2cb7dc_create_sources_and_facts_tables.py  d795a6500347_create_sources_and_facts_tables.py  fd0c0ba428aa_create_editorial_angles_table.py
backend/app/: main.py
backend/app/api/routes/: jobs.py
backend/app/core/: config.py  db.py  gpu.py  storage.py
backend/app/models/: editorial.py  fact.py  scene.py  source.py  video_job.py
backend/app/orchestrator/: direction.py  editorial.py  factcheck.py  narration.py  pipeline.py  research.py  scripting.py  steps.py
backend/app/providers/: bge_reranker.py  character_library.py  chatterbox_tts.py  gemini_client.py  llm.py  ollama_client.py  tts.py  verifier.py  wikipedia.py
backend/app/schemas/: direction.py  scene.py  video_job.py
backend/assets/personagem/bolonhesa/: README.md  contact_sheet.py  manifest.json  validar.py
backend/tests/: conftest.py  test_bge_reranker.py  test_character_library.py  test_chatterbox_provider.py  test_db.py  test_direction_schema.py  test_direction_step.py  test_editorial_model.py  test_editorial_step.py  test_factcheck_step.py  test_gemini_provider.py  test_health.py  test_jobs.py  test_narration_step.py  test_ollama_parser.py  test_pipeline.py  test_research_step.py  test_scene_audio_column.py  test_scene_direction_columns.py  test_scene_factcheck_columns.py  test_scene_model.py  test_script_schema.py  test_scripting_step.py  test_source_fact_models.py  test_storage.py  test_test_video_job_table.py  test_wikipedia_provider.py
docs/: PLANO-BOLONHESA.md
