[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Content Factory — backend"
authors = ["Pablo"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.50"
psycopg = {extras = ["binary"], version = "^3.3.4"}
alembic = "^1.18.4"
httpx = "^0.27.0"
ollama = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.7.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: teste que depende do posgres no ar"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"